# Nextjs-TypeScript-Rust-ChatGPT-App

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .env  package-lock.json  package.json  tsconfig.json
frontend/pages/: index.tsx
frontend/pages/api/: answer.ts
frontend/styles/: Home.module.css  globals.css
